test/tests/stages/18_structures/invalid_parse/empty_initializer_list.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[25]:
  struct
  identifier(s)
  {
  int
  identifier(a)
  ;
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  struct
  identifier(s)
  identifier(foo)
  =
  {
  }
  ;
  return
  const int(0)
  ;
  }
